# matchkit

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.desloppify/: query.json  state-python.json  state-python.json.bak
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai/: __init__.py  icebreaker.py  intent_detector.py  llm_client.py  match_explainer.py  nudge_generator.py  profile_enrichment.py
api/: __init__.py  auth.py  main.py  schemas.py
chat/: __init__.py  manager.py  service.py
config/: __init__.py  scoring.yml  settings.py
config/examples/: scoring_cofounder.yml  scoring_ngo.yml  scoring_nonprofit.yml
crm/: __init__.py  client.py  sync.py
db/: __init__.py  base.py  repositories.py  session.py
email_service/: __init__.py  builder.py  sender.py
email_service/templates/: weekly_digest.html  weekly_digest.txt
matching/: __init__.py  embeddings.py  recommendations.py  scoring.py  similarity.py
models/: __init__.py  entities.py
onboarding/: __init__.py  engine.py
scheduler/: __init__.py  jobs.py  manager.py
tests/: __init__.py  _seed.py  conftest.py  test_csv_loader.py  test_email_builder.py  test_scoring.py  test_similarity.py
utils/: __init__.py  csv_loader.py  logging.py  urls.py
